# experiments

./: .gitignore  bun.lockb  package.json
ansible/: Dockerfile  README.md
elixir/: concat.exs  math.exs  recursion.exs
format_html_in_rust/: index.html
k6/: Dockerfile  api-test.js  appmixer-dev.js  appmixer-local.js  index.mjs  multiple-flows.js  not-running.html  not-running.js  request-cancel-error.html  request-cancel-error.js  request-error.html  request-error.js  request-immediate-response.html  request-immediate-response.js  request-no-response.html  request-no-response.js  request-response.html  request-response.js  results.json  summary.html  tagged-login.js
k8s/: example-redis-config.yaml  nginx-deployment.yaml  nginx-service.yaml
latex/: README.md  arara.tex  beamer.tex  body.tex  compose.yml  coverletter.tex  coverletter.tex.nonchatgpt  essay.tex  hello_world.tex  info.tex
local-host-stats/: compose.yml
local-host-stats/docker-stats-client/: Cargo.toml  Dockerfile  README.md
local-host-stats/docker-stats-client/src/: main.rs
lua/: hello.lua
maven/: .gitignore
n8n/: compose.yml
nats/: compose.yml
nginx/: compose.yml  nginx.conf  telavox-proxy.conf
nushell/: people.txt
ollama/: Modelfile.miku
perl/: test.pl
prometheus/: prometheus.yml
rabbitmq/: index.html  perf.css  perf.js  publish-consume-result.js  publish-consume-spec.js
rust/leptos/leptos-tutorial/: Cargo.toml  Trunk.toml  index.html
rust/leptos/leptos-tutorial/src/: buttons.rs  children.rs  control_flow.rs  inputs.rs  lists.rs  main.rs  progress_bars.rs  quirks.rs
rust/printer-server/: Cargo.toml
rust/printer-server/src/: main.rs
rust/prometheus-example/: Cargo.toml
rust/prometheus-example/src/: main.rs
test-askama/: Cargo.toml
test-indicatif/: Cargo.toml
typst/: conf.typ  main.typ  (+2 more)
(+534 files in other folders)
